--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Portfolio</title>
+  <title style="text-align: center">My Portfolio</title>
 </head>
 <body>
   <h1>Portfolio Test</h1>
-  <h1>Checking if it updates</h1>
+  <p>Checking if it updates</p>
 </body>
 </html>
