--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>My Portfolio</title>
 </head>
-<body>
-  <h1 style="text-align: center">My Portfolio</h1>
-  <p style="text-align: center">Project One Placeholder</p>
+<body style="background-color: #8bdb7f;">
+  <h1 style="text-align: center; color: white">My Portfolio</h1>
+  <p style="text-align: center; color: white">Project One Placeholder</p>
 </body>
 </html>
