--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style="background-color: #8bdb7f;">
   <h1 style="text-align: center; color: white;">My Portfolio</h1>
   <p style="text-align: center; color: white;">Project One Placeholder</p>
-  <div style="width: 100px; height: 100px; background-color: white; border-radius 15px; margin: auto;">
+  <div style="width: 250px; height: 250px; background-color: white; border-radius: 15px; margin: auto;">
     <p style="text-align: center; color: black;">For Future project 1 placeholder</p>
   </div>
 </body>
